@@ -1,4 +1,5 @@
 4.0
+ * Fix dynamic endpoint snitch for sub-millisecond use case (CASSANDRA-13577)
  * Fix Randomness of stress values (CASSANDRA-12744)
  * Allow selecting Map values and Set elements (CASSANDRA-7396)
  * Fast and garbage-free Streaming Histogram (CASSANDRA-13444)
